--- a/index.html
+++ b/index.html
@@ -1,1 +1,82 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Sales Website</title>
+    <style>
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            background-color: #f8f8f8;
+            color: #333;
+        }
+
+        header, main, footer {
+            padding: 20px;
+            text-align: center;
+        }
+
+        header {
+            background-color: #007BFF;
+            color: #fff;
+        }
+
+        footer {
+            background-color: #f0f0f0;
+        }
+
+        h1 {
+            color: #007BFF;
+        }
+
+        h2 {
+            color: #004080;
+        }
+
+        p {
+            color: #555;
+            line-height: 1.6;
+        }
+
+        a {
+            color: #007BFF;
+            text-decoration: none;
+        }
+
+        a:hover {
+            text-decoration: underline;
+        }
+
+        /* Add some styling to the bot button */
+        #zsiqchat {
+            background-color: #004080;
+            color: #fff;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 16px;
+        }
+    </style>
+</head>
+
+<body>
+    <header>
+        <h1>Welcome to Your Sales Website</h1>
+        <h3>This website is an example of the Zobot project</h3>
+        <h2>Click the button below to interact with the bot</h2>
+    </header>
+
+    <section>
+        <h2>About Zoho</h2>
+        <p>Zoho Corporation is a software company that provides cloud-based software for businesses. Their products include a wide range of applications for sales, marketing, collaboration, finance, and more.</p>
+        <p>Visit <a href="https://www.zoho.com/" target="_blank">Zoho's official website</a> for more information.</p>
+    </section>
+
+   
 <script type="text/javascript" id="zsiqchat">var $zoho=$zoho || {};$zoho.salesiq = $zoho.salesiq || {widgetcode: "siq6406bb93602d78936052b6652f6309c9", values:{},ready:function(){}};var d=document;s=d.createElement("script");s.type="text/javascript";s.id="zsiqscript";s.defer=true;s.src="https://salesiq.zohopublic.com/widget";t=d.getElementsByTagName("script")[0];t.parentNode.insertBefore(s,t);</script>
+</body></html>
